add database connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ file.directory=files
 
 # Ukazyvaem maksimal'nyj razmer fajla (po umolchaniju 1MB, chto neudobno, t.k. nekotorye izobrazhenija mogut vesit' mnogo)
 spring.servlet.multipart.max-file-size=10MB
+
+datasource.url=jdbc:postgresql://127.0.0.1:5432/dreamjob
+datasource.username=postgres
+datasource.password=password
